k8s/boom-consumer-ztf.yaml
##############################################
# BOOM Consumer ZTF — Deployment
##############################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boom-consumer-ztf
  namespace: umn-babamul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boom-consumer-ztf
  template:
    metadata:
      labels:
        app: boom-consumer-ztf
    spec:
      containers:
        - name: consumer-ztf
          image: ghcr.io/keshavmajithia/boom:latest
          command: ["/app/kafka_consumer", "ztf", "--topics-override", "ztf_20260408_programid1"]
          volumeMounts:
            - name: boom-config
              mountPath: /app/config.yaml
              subPath: config.yaml
              readOnly: true
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
      volumes:
        - name: boom-config
          configMap:
            name: boom-config
