k8s/boom-scheduler-ztf.yaml
##############################################
# BOOM Scheduler ZTF — Deployment
##############################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boom-scheduler-ztf
  namespace: umn-babamul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boom-scheduler-ztf
  template:
    metadata:
      labels:
        app: boom-scheduler-ztf
    spec:
      containers:
        - name: scheduler-ztf
          image: ghcr.io/keshavmajithia/boom:latest
          command: ["/app/scheduler", "ztf"]
          volumeMounts:
            - name: boom-config
              mountPath: /app/config.yaml
              subPath: config.yaml
              readOnly: true
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
      volumes:
        - name: boom-config
          configMap:
            name: boom-config
