k8s/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: broker
  namespace: umn-babamul
spec:
  serviceName: broker
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - name: broker
          image: apache/kafka:4.1.1
          ports:
            - containerPort: 29092
              name: internal
            - containerPort: 9092
              name: client
            - containerPort: 29093
              name: controller
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
            - name: kafka-jaas
              mountPath: /etc/kafka/kafka_server_jaas.conf
              subPath: kafka_server_jaas.conf
              readOnly: true
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          readinessProbe:
            exec:
              command:
                - bash
                - -c
                - "/opt/kafka/bin/kafka-cluster.sh cluster-id --bootstrap-server localhost:29092 >/dev/null 2>&1"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - "/opt/kafka/bin/kafka-cluster.sh cluster-id --bootstrap-server localhost:29092 >/dev/null 2>&1"
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
      volumes:
        - name: kafka-data
          emptyDir: {}
        - name: kafka-jaas
          configMap:
            name: kafka-jaas
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: umn-babamul
spec:
  selector:
    app: broker
  publishNotReadyAddresses: true
  ports:
    - name: internal
      port: 29092
      targetPort: 29092
    - name: client
      port: 9092
      targetPort: 9092
  clusterIP: None
