k8s/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: umn-babamul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:7.2.6
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: valkey-data
              mountPath: /data
          resources:
            requests:
              cpu: "500m"
              memory: "900Mi"
            limits:
              cpu: "600m"
              memory: "1Gi"
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 15
            periodSeconds: 15
      volumes:
        - name: valkey-data
          persistentVolumeClaim:
            claimName: valkey-data
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: umn-babamul
spec:
  selector:
    app: valkey
  ports:
    - port: 6379
      targetPort: 6379
